examples/kraken-example/public/templates/locales/US_en/errors/http_503.int
def header
  "Service unavailable"
end

def description
  "The service is unavailable. Please try back shortly."
end
